[workspace]
members = [ "srtp", "crypto"]

[package]
name = "test_srtp"
version = "0.0.0"
publish = false
edition = "2021"
autobins = false


# TODO: this should probably go elsewhere
[[bin]]
name = "test_srtp"
path = "test/test_srtp.rs"

[dependencies]
c2rust-bitfields= "0.3"
libc = "0.2"
srtp2 = { path = "srtp" }