[package]
name = "srtp2"
version = "0.1.0"
edition = "2021"


[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c2rust-bitfields= "0.3"
libc= "0.2"
crypto = { path = "../crypto" }